--- a/css/main.css
+++ b/css/main.css
@@ -177,14 +177,12 @@ nav .logo{
 
 .column p {
     display: block;
-    margin-bottom: 10px;
-    text-decoration: none;
+    margin-bottom: 15px;
 }
 
 .column a {
     display: block;
-    margin-bottom: 10px;
-    text-decoration: none;
+    margin-bottom: 15px;
 }
 
 /* side main div content  styling */
@@ -1241,9 +1239,9 @@ h3{
         font-size: 16px; 
     }
 
-    .add-seaman-banner {
+    .add-seaman-banner img{
         width: 100%; 
-        max-width: 100%; 
+        height: auto;
         margin-left: 7px;
         padding-right: 31px;
     }
@@ -1501,6 +1499,14 @@ h3{
 
     .side-input{
         width: 100%;
+    }
+
+    .column div{
+        flex: 1;
+        width: 100%;
+        font-size: 15px;
+        margin: 5px;
+        border-bottom: 2px solid #DDE3EC;
     }
 
 }
