connection to database

--- a/css/main.css
+++ b/css/main.css
@@ -1339,10 +1339,14 @@ h3{
     /*------------banner container------------*/
 
 
-    .first-banner, .second-banner {
-        padding: 3px;
+    .first-banner{
+        padding: 5px;
         width: 100%; 
-        font-size: 24pt; 
+    }
+    
+    .second-banner{
+        padding: 5px;
+        width: 100%; 
     }
 
     /*-----------company content-----------*/
