--- a/css/main.css
+++ b/css/main.css
@@ -1339,14 +1339,10 @@ h3{
     /*------------banner container------------*/
 
 
-    .first-banner{
-        padding: 5px;
+    .first-banner, .second-banner {
+        padding: 3px;
         width: 100%; 
-    }
-    
-    .second-banner{
-        padding: 5px;
-        width: 100%; 
+        font-size: 24pt; 
     }
 
     /*-----------company content-----------*/
