--- a/css/main.css
+++ b/css/main.css
@@ -1293,11 +1293,10 @@ h3{
         font-size: 16px; 
     }
 
-    .add-seaman-banner img{
+    .add-seaman-banner{
         width: 100%; 
-        height: auto;
         margin-left: 7px;
-        padding-right: 31px;
+        margin-right: 7px;
     }
 
     .seaman-registration-form{
@@ -1500,11 +1499,10 @@ h3{
         font-size: 14px; /* Smaller font size for links */
     }
 
-    .add-seaman-banner {
+    .add-seaman-banner{
         width: 100%; 
-        max-width: 100%; 
         margin-left: 7px;
-        padding-right: 18px;
+        margin-right: 7px;
     }
 
     .seaman-registration-form{
