--- a/css/main.css
+++ b/css/main.css
@@ -454,8 +454,12 @@ input:focus, textarea:focus {
 }
 
 .data-record {
-    margin-top: 10px;
     margin-left: 5px;
+}
+
+#employer-data{
+    margin-left: 5px;
+    margin-top: 8px;
 }
 
 .record-style{
