Update company post container height to auto and add margin for better layout

--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ nav .burger {
 }
 
 .company-post-container {
-    height: 40px;
+    height: auto;
     width: 100%;
     padding-left: 10px;
     display: flex;
@@ -144,6 +144,7 @@ nav .burger {
     align-items: center; 
     box-sizing: border-box; 
     overflow: hidden; 
+    margin: 1%;
 }
 
 .seaman-registration-form{
