--- a/css/sample.css
+++ b/css/sample.css
@@ -125,12 +125,6 @@ nav .logo{
     width: 100%;
     gap: 15px;
     background-color: #305067;
-    padding-left: 5px;
-}
-
-.company-header-container strong{
-    color: white;
-    font-size: 12px;
 }
 
 .company-post-container {
@@ -277,8 +271,8 @@ nav .logo{
 
 .job-content, .row div {
     flex: 1;
-    text-align: left;
-    padding: 0 10px;
+    text-align: left;  
+    padding: 0 10px; 
     margin-bottom: 10px;
     margin-top: 5px;
 }
@@ -409,34 +403,25 @@ input:focus, textarea:focus {
 
 
 .category{
-    padding-left: 5px;
-    height: 27px;
-    width: 100%;
-    background-color:rgba(255,51,0,255);
-}
-
-.advertise{
-    padding-left: 5px;
     height: 27px;
     width: 100%;
     background-color:rgba(255,51,0,255);
 }
 
 .input-fields {
-    margin-top: 3px;
+    width: 100%;
+    height: 121.2px;
+    margin-top: 10px;
     font-size:12px;
     font-weight:700;
+    padding-left: 5px;
 }
 
 .input-fields input{
     display: block;
-    margin: 0 0 3px 0;
+    margin-top: 3px;
+    margin-bottom: 3px;
     height: 20px;
-    width: 80%;
-}
-
-.input-fields a{
-    font-size: 12px;
 }
 
 /*------database container styling ------------*/
@@ -463,7 +448,13 @@ input:focus, textarea:focus {
 }
 
 .data-record {
+    margin-top: 4px;
     margin-left: 5px;
+}
+
+#employer-data{
+    margin-left: 5px;
+    margin-top: 8px;
 }
 
 .record-style{
@@ -474,12 +465,14 @@ input:focus, textarea:focus {
 /*------Random Images styling ------------*/
 .random-images {
     position: relative;
+    height: 180px;
     width: 100%;
     font-size: 20px;
     object-fit: contain;
     object-position: center bottom;
     flex-direction: column;
     box-sizing: border-box; 
+    margin-bottom: 25px;
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.4); /* Base shadow */
 }
 
@@ -548,15 +541,17 @@ input:focus, textarea:focus {
 
 
 /*strong and other text styling*/
-
-.advertise strong {
+.company-header-container,
+strong{
     padding-left: 5px;
-    color: white;
-    font-size: 12px;
-    font-weight: 700;
+    color: white; 
+    font-size:12px;
+    font-weight:700;
+    padding-top: 5px;
 }
 
 .category strong{
+    padding-left: 5px;
     color: white; 
     font-size:12px;
     font-weight:700;
@@ -656,7 +651,6 @@ input:focus, textarea:focus {
       margin-bottom: 35px;
       border-bottom: 2px solid #DDE3EC;
     }
-
     .formbold-steps ul {
       padding: 0;
       margin: 0;
@@ -895,12 +889,6 @@ span{
     display: block;
 }
 
-h2{
-    text-align: center;
-    color: #333;
-    margin-bottom: 20px;
-    font-size: 24px;
-}
 
 h3{
     text-align: center;
@@ -919,7 +907,6 @@ h3{
     transition: background-color 0.3s;
     cursor: pointer;
     text-align: center;
-    display: block;
 }
 
 .side-button:hover{
@@ -927,10 +914,9 @@ h3{
     color: white;
 }
 
-
 .company-container {
-    width: 777px;
-    margin-bottom: 20px;
+    max-width: 800px;
+    margin: 20px auto;
     background: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -943,8 +929,6 @@ h3{
     padding: 20px;
     display: flex;
     align-items: center;
-    width: 100%;
-    height: 150px;
 }
 
 .company-logo {
@@ -976,23 +960,19 @@ h3{
 
 .company-details {
     margin: 0 0 10px;
-    font-size: 20px;
+    font-size: 18px;
     color: #00264d;
-    text-align: left;
-    font-weight: 700;
 }
 
 .section-container p {
-    margin: 5px 0 10px 0;
-    color: #393939;
+    margin: 5px 0;
+    color: #555;
     font-weight: bold;
 }
 
 .section-container p span {
-    color: #3f3d3d;
-    font-weight: 300;
-    font-size: 15px;
-    word-spacing: 3px;
+    color: #7e7e7e;
+    font-weight: 600;
 }
 
 .job {
@@ -1050,7 +1030,7 @@ h3{
 }
 
 .job-button {
-    width: 120px;
+    width: 100px;
     height: 40px;
     position: absolute;
     top: 50%;
@@ -1062,83 +1042,22 @@ h3{
     border-radius: 5px;
     padding: 5px 10px;
     cursor: pointer;
-    opacity: 0; /* Hidden by default on desktop */
-    visibility: hidden; /* Prevent interaction on desktop */
+    opacity: 0; /* Hidden by default */
+    visibility: hidden; /* Prevent interaction */
     transition: opacity 0.5s ease, visibility 0.5s ease; /* Smooth fade-in effect */
 }
 
-/* Hover effect for desktop */
+.job:hover .time {
+    opacity: 0; /* Fade out the date */
+}
+
 .job:hover .job-button {
     opacity: 1; /* Fade in the button */
     visibility: visible; /* Allow interaction */
 }
 
-/*----------------------------------------------------------------- MOdal ------------------------------------------------------------*/
-    .job-title-modal{
-        margin-top: 10px;
-    }
-    .modal-title{
-        font-weight: 600;
-        font-size: larger;
-        color: #1e1e1e;
-    }
 
-    .header img{
-        width: 100%;
-        height: 100%;
-        object-fit: none;
-    }
 
-    .vessel-type, .job-description, .job-requirements{
-        font-size: 14px;
-        color: #444444;
-        margin: 5px 0;
-      }
-      
-      .user-inputs {
-        margin-top: 10px;
-      }
-      
-      .user-inputs label {
-        display: block;
-        font-size: 14px;
-        color: #555;
-        margin-top: 10px;
-      }
-      
-      .user-inputs .form-control {
-        width: 50%;
-        padding: 10px;
-        margin-top: 5px;
-        font-size: 14px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-      
-      .actions {
-        margin-top: 5px;
-      }
-      
-      .actions .btn {
-        margin-right: 10px;
-      }
-      
-      .description{
-        font-size: 15px;
-        padding-top: 5px;
-        color: #1a72cb;
-      }
-
-      .register{
-        font-size: 13px;
-        padding-top: 5px;
-        color: #0f0f10;
-      }
-
-      label {
-        display: block;
-        margin: 0;
-    }
 /*-------------------------------------------------------Tablet-----------------------------------------------------*/
 
 @media (max-width: 768px) {
@@ -1166,17 +1085,16 @@ h3{
     }
 
     .nav-menu{
-        height: auto;
         position: absolute; /* Changed from fixed */
         left: -100%;
-        top: 55px;
+        top: 50px;
         gap: 0;
         flex-direction: column;
         background-color: rgba(31, 30, 30, 0.9);
         width: 100%;
+        height: 100px;
         text-align: center;
         transition: 0.3s;
-        padding: 0 30px 10px 30px;
     }
 
     .nav-item{
@@ -1259,22 +1177,11 @@ h3{
     }
 
     .employer,
+    .database,
+    .random-images,
     .ads-container {
         width: 100%;
-        height: 200px;
-    }
-
-    .database,
-    .random-images{
-        width: 100%;
-    }
-
-    .ads-container, .advertise {
-        display: none;
-    }
-
-    #employer-data{
-        margin-top: 5px;
+        font-size: 16px; 
     }
 
     .image-container {
@@ -1289,9 +1196,14 @@ h3{
         height: auto; 
     }
 
+
+    .submit-photo{
+        margin-top: 127px;
+    }
+
     .input-fields {
-        padding: 0 4px 0 0;
-        font-size: 12px; 
+        padding: 10px;
+        font-size: 14px; 
     }
 
     .advertisement {
@@ -1302,22 +1214,13 @@ h3{
     /*-----------------JOB SEARCH RESPONSIVE ----------------*/
 
     .header-content th {
-        font-size: 16px;  
-        padding: 8px;
+        font-size: 18px;  
+        padding: 10px;
     }
 
     .job-content .row div {
-        margin-bottom: 0;
-    }
-
-    .row {
-        margin-right: 0;
-        margin-left: 0;
-    }
-
-    .company-name{
-        font-weight: 600;
-        font-size: 13px;
+        text-align: left;  
+        padding: 10px 0;
     }
 
     /*----------------- ADD EMPLOYER RESPONSIVE ----------------*/
@@ -1390,7 +1293,7 @@ h3{
     }
 
     .submit-photo {
-        margin-top: 10px;
+        margin-top: 110px;
     }
 
     .employer-register{
@@ -1401,29 +1304,8 @@ h3{
     .side-input{
         width: 100%;
     }
-
+    
     /*--------------------- display company -----------------------------*/
-    .job-button {
-        opacity: 1; /* Always visible on mobile */
-        visibility: visible; /* Always interactive on mobile */
-        position: static; /* Make the button static */
-        margin-top: 20px; /* Add margin to space it from the date */
-        width: 100%; /* Make the button span the full width */
-        transition: none; /* No transition needed on mobile */
-        font-size: 15px;
-    }
-
-    /* Position the button below the date */
-    .job .time {
-        margin-bottom: 10px; /* Add margin to the bottom of the date for spacing */
-    }
-
-    /* Remove hover effect on mobile */
-    .job:hover .job-button {
-        opacity: 1; /* Button stays visible */
-        visibility: visible; /* Button stays interactive */
-    }
-
     .company-logo{
         margin-right: 10px;
         width: 200px;
@@ -1438,17 +1320,11 @@ h3{
     }
 
     .job-main-content{
-        padding: 0px 10px 0px 10px;
-        width: 100%;
+        padding: 10px;
     }
-
-    .company-container{
-        width: 100%;
-    }
-
 
     .section-container p{
-        font-size: 16px;
+        font-size: 14px;
     }
 
     .company-info p{
@@ -1461,47 +1337,16 @@ h3{
         font-size: 13px;
     }
 
+    .job-button{
+        display: none;
+    }
+
+    .job-button:hover{
+        display: none;
+    }
+
     .company-job-details{
         font-size: 13px;
-    }
-
-    .side-button{
-        font-size: 10px;
-        text-align: center;
-        padding: 5px;
-        width: 30%;
-        display: block;
-    }
-
-    .header img{
-        width: 100%;
-        object-fit: fill;
-    }
-
-    .job-title-modal{
-        font-size: 14px;
-    }
-
-    .user-inputs .form-control {
-        width: 100%;
-    }
-
-    .modal{
-        padding-right: 0px;
-    }
-
-    .company-header-container strong{
-        font-size: 15px;
-    }
-
-    input, textarea, select {
-        font-size: 16px; /* Set the font size to 16px */
-        -webkit-text-size-adjust: 100%; /* Prevent zooming behavior on iOS */
-    }
-
-    .input-fields input{
-        width: 100%;
-        height: 25px;
     }
 }
 
@@ -1535,13 +1380,13 @@ h3{
     .nav-menu{
         position: absolute; /* Changed from fixed */
         left: -100%;
+        top: 50px;
         gap: 0;
         flex-direction: column;
         background-color: rgba(31, 30, 30, 0.9);
         width: 100%;
         text-align: center;
         transition: 0.3s;
-        padding: 0 20px 5px 20px;
     }
 
     .nav-item{
@@ -1607,6 +1452,13 @@ h3{
         font-size: 16px; 
     }
 
+    /*------------ Side content ----------*/
+
+    .side-content {
+        width: 100%; 
+        padding: 0 10px; 
+    }
+
     .employer,
     .database,
     .random-images,
@@ -1627,12 +1479,13 @@ h3{
     }
 
     .submit-photo{
-        margin-top: 0;
+        margin-top: 58px;
     }
+
 
     .input-fields {
         font-size: 12px; 
-        padding: 7px 10px 0 5px;
+        padding: 10px;
     }
 
     .advertisement {
@@ -1642,13 +1495,8 @@ h3{
       
      /*-----------------JOB SEARCH RESPONSIVE ----------------*/
 
-     th.company{
-        display: table-cell; /* Company column is visible */
-    }
-
-    /* Hide Job Position, Ad Expiry, and Action columns */
-    th.job-position, th.ad-expiry, th.action{
-        display: none; /* Hide these columns */
+     .header-content th {
+        font-size: 14px;  /* Reduce font size for smaller screens */
     }
 
     .job-content .row {
@@ -1659,16 +1507,6 @@ h3{
     .job-content .row div {
         text-align: left;  /* Align text to the left in columns for smaller screens */
         padding: 4px 0;
-    }
-
-    .row {
-        margin-right: 0;
-        margin-left: 0;
-    }
-
-    .company-name{
-        font-weight: 600;
-        font-size: 15px;
     }
 
     /*----------------- ADD EMPLOYER RESPONSIVE ----------------*/
